--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,15 @@
     }
   }
   
+  ::-webkit-scrollbar {
+    width: 0;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: transparent; /* Match your Tailwind color */
+    border-radius: 4px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: transparent; /* Match your Tailwind color */
+  }
